tests/fail/data_race/fiber_create_switch_causality.stderr
error: Undefined Behavior: Data race detected between (1) non-atomic write on thread `unnamed-ID` and (2) non-atomic write on thread `unnamed-ID` at ALLOC
  --> tests/fail/data_race/fiber_create_switch_causality.rs:LL:CC
   |
LL | ...   utils::miri_fiber_switch(f);
   |                                 ^ (2) just happened here
   |
help: and (1) occurred earlier here
  --> tests/fail/data_race/fiber_create_switch_causality.rs:LL:CC
   |
LL |                 let f = utils::miri_fiber_create(fiber_body, core::ptr::null_mut());
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: this is on thread `unnamed-ID`
note: the current function got called indirectly due to this code
  --> tests/fail/data_race/fiber_create_switch_causality.rs:LL:CC
   |
LL | / ...   s.spawn(|| {
LL | | ...       PARENT_FIBER.store(utils::miri_fiber_current(), Ordering::Relaxed);
LL | | ...       let f = fiber.load(Ordering::Relaxed);
LL | | ...       utils::miri_fiber_switch(f);
LL | | ...   });
   | |________^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to 1 previous error

